--- a/ConjuntoResidencial/src/main/resources/application.properties
+++ b/ConjuntoResidencial/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ConjuntoResidencial
-spring.datasource.url=jdbc:postgresql://@aws-0-us-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:5432/postgres
 spring.datasource.username=postgres.aaloazolxtorggoqppug
 spring.datasource.password=Angelito3.
 spring.datasource.driver-class-name=org.postgresql.Driver
